pa3/cool.output
Terminals unused in grammar

   LE
   ERROR


State 1 conflicts: 2 shift/reduce
State 6 conflicts: 2 shift/reduce
State 7 conflicts: 2 shift/reduce
State 17 conflicts: 2 shift/reduce
State 18 conflicts: 2 shift/reduce
State 26 conflicts: 2 shift/reduce
State 27 conflicts: 1 shift/reduce
State 33 conflicts: 2 shift/reduce
State 43 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 118 conflicts: 8 shift/reduce
State 122 conflicts: 2 shift/reduce
State 140 conflicts: 2 shift/reduce
State 145 conflicts: 1 shift/reduce
State 151 conflicts: 8 shift/reduce
State 162 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error class_list

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | error '{' feature_list '}' ';'
    8      | error

    9 feature_list: %empty
   10             | feature
   11             | feature_list feature
   12             | error ',' feature_list

   13 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID ':' TYPEID ASSIGN expression ';'
   15        | OBJECTID ':' TYPEID ';'
   16        | error

   17 expression: OBJECTID ASSIGN expression
   18           | IF expression THEN expression ELSE expression FI
   19           | '{' expression_list_colon '}'
   20           | WHILE expression LOOP expression POOL
   21           | CASE expression OF case_list ESAC
   22           | NEW TYPEID
   23           | ISVOID expression
   24           | expression '+' expression
   25           | expression '-' expression
   26           | expression '*' expression
   27           | expression '/' expression
   28           | expression '<' expression
   29           | expression '<' '=' expression
   30           | expression '=' expression
   31           | '~' expression
   32           | '(' expression ')'
   33           | NOT expression
   34           | OBJECTID
   35           | STR_CONST
   36           | INT_CONST
   37           | BOOL_CONST
   38           | LET let_expression
   39           | expression '.' OBJECTID '(' expression_list_comma ')'
   40           | OBJECTID '(' expression_list_comma ')'
   41           | expression '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
   42           | error

   43 let_expression: OBJECTID ':' TYPEID IN expression
   44               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   45               | OBJECTID ':' TYPEID ',' let_expression
   46               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   47               | error IN expression
   48               | error ',' let_expression

   49 case_list: case
   50          | case_list case
   51          | error case_list

   52 case: CASE OBJECTID ':' TYPEID DARROW expression ';' ESAC
   53     | error

   54 formal_list: %empty
   55            | formal
   56            | formal_list ',' formal
   57            | error ',' formal_list

   58 formal: OBJECTID ':' TYPEID
   59       | error

   60 expression_list_colon: expression ';'
   61                      | expression_list_colon expression ';'
   62                      | expression_list_colon ';' error

   63 expression_list_comma: expression
   64                      | expression_list_comma ',' expression
   65                      | %empty
   66                      | error ',' expression_list_comma


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 32 39 40 41
')' (41) 13 32 39 40 41
'*' (42) 26
'+' (43) 24
',' (44) 12 45 46 48 56 57 64 66
'-' (45) 25
'.' (46) 39 41
'/' (47) 27
':' (58) 13 14 15 43 44 45 46 52 58
';' (59) 5 6 7 13 14 15 52 60 61 62
'<' (60) 28 29
'=' (61) 29 30
'@' (64) 41
'{' (123) 5 6 7 13 19
'}' (125) 5 6 7 13 19
'~' (126) 31
error (256) 4 7 8 12 16 42 47 48 51 53 57 59 62 66
CLASS (258) 5 6
ELSE (259) 18
FI (260) 18
IF (261) 18
IN (262) 43 44 47
INHERITS (263) 6
LET (264) 38
LOOP (265) 20
POOL (266) 20
THEN (267) 18
WHILE (268) 20
CASE (269) 21 52
ESAC (270) 21 52
OF (271) 21
DARROW (272) 52
NEW (273) 22
ISVOID (274) 23
STR_CONST (275) 35
INT_CONST (276) 36
BOOL_CONST (277) 37
TYPEID (278) 5 6 13 14 15 22 41 43 44 45 46 52 58
OBJECTID (279) 13 14 15 17 34 39 40 41 43 44 45 46 52 58
ASSIGN (280) 14 17 44 46
NOT (281) 33
LE (282)
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4, on right: 1 3 4
class (48)
    on left: 5 6 7 8, on right: 2 3
feature_list (49)
    on left: 9 10 11 12, on right: 5 6 7 11 12
feature (50)
    on left: 13 14 15 16, on right: 10 11
expression (51)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42, on right: 13 14 17 18 20 21 23 24 25 26
    27 28 29 30 31 32 33 39 41 43 44 46 47 52 60 61 63 64
let_expression (52)
    on left: 43 44 45 46 47 48, on right: 38 45 46 48
case_list (53)
    on left: 49 50 51, on right: 21 50 51
case (54)
    on left: 52 53, on right: 49 50
formal_list (55)
    on left: 54 55 56 57, on right: 13 56 57
formal (56)
    on left: 58 59, on right: 55 56
expression_list_colon (57)
    on left: 60 61 62, on right: 19 61 62
expression_list_comma (58)
    on left: 63 64 65 66, on right: 39 40 41 64 66


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . class_list
    7 class: error . '{' feature_list '}' ';'
    8      | error .

    error  shift, and go to state 1
    CLASS  shift, and go to state 2
    '{'    shift, and go to state 6

    $end   reduce using rule 8 (class)
    error  [reduce using rule 8 (class)]
    CLASS  [reduce using rule 8 (class)]

    class_list  go to state 7
    class       go to state 5


State 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 10
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 11


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    7 class: error '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 9 (feature_list)]
    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 14
    feature       go to state 15


State 7

    3 class_list: class_list . class
    4           | error class_list .

    error  shift, and go to state 10
    CLASS  shift, and go to state 2

    $end   reduce using rule 4 (class_list)
    error  [reduce using rule 4 (class_list)]
    CLASS  [reduce using rule 4 (class_list)]

    class  go to state 11


State 8

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 16
    '{'       shift, and go to state 17


State 9

    0 $accept: program $end .

    $default  accept


State 10

    7 class: error . '{' feature_list '}' ';'
    8      | error .

    '{'  shift, and go to state 6

    $default  reduce using rule 8 (class)


State 11

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 12

   12 feature_list: error . ',' feature_list
   16 feature: error .

    ','  shift, and go to state 18

    $default  reduce using rule 16 (feature)


State 13

   13 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   15        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 14

    7 class: error '{' feature_list . '}' ';'
   11 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 22

    feature  go to state 23


State 15

   10 feature_list: feature .

    $default  reduce using rule 10 (feature_list)


State 16

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 24


State 17

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 9 (feature_list)]
    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 25
    feature       go to state 15


State 18

   12 feature_list: error ',' . feature_list

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 9 (feature_list)]
    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 26
    feature       go to state 15


State 19

   13 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    error     shift, and go to state 27
    OBJECTID  shift, and go to state 28

    ','  reduce using rule 54 (formal_list)
    ')'  reduce using rule 54 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


State 20

   14 feature: OBJECTID ':' . TYPEID ASSIGN expression ';'
   15        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 31


State 21

   16 feature: error .

    $default  reduce using rule 16 (feature)


State 22

    7 class: error '{' feature_list '}' . ';'

    ';'  shift, and go to state 32


State 23

   11 feature_list: feature_list feature .

    $default  reduce using rule 11 (feature_list)


State 24

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 33


State 25

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
   11 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 34

    feature  go to state 23


State 26

   11 feature_list: feature_list . feature
   12             | error ',' feature_list .

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 12 (feature_list)]
    OBJECTID  [reduce using rule 12 (feature_list)]
    '}'       reduce using rule 12 (feature_list)

    feature  go to state 23


State 27

   57 formal_list: error . ',' formal_list
   59 formal: error .

    ','  shift, and go to state 35

    ','       [reduce using rule 59 (formal)]
    $default  reduce using rule 59 (formal)


State 28

   58 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 36


State 29

   13 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   56 formal_list: formal_list . ',' formal

    ','  shift, and go to state 37
    ')'  shift, and go to state 38


State 30

   55 formal_list: formal .

    $default  reduce using rule 55 (formal_list)


State 31

   14 feature: OBJECTID ':' TYPEID . ASSIGN expression ';'
   15        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 39
    ';'     shift, and go to state 40


State 32

    7 class: error '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 33

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 9 (feature_list)]
    OBJECTID  [reduce using rule 9 (feature_list)]
    '}'       reduce using rule 9 (feature_list)

    feature_list  go to state 41
    feature       go to state 15


State 34

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 42


State 35

   57 formal_list: error ',' . formal_list

    error     shift, and go to state 27
    OBJECTID  shift, and go to state 28

    ','  reduce using rule 54 (formal_list)
    ')'  reduce using rule 54 (formal_list)

    formal_list  go to state 43
    formal       go to state 30


State 36

   58 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 44


State 37

   56 formal_list: formal_list ',' . formal

    error     shift, and go to state 45
    OBJECTID  shift, and go to state 28

    formal  go to state 46


State 38

   13 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 47


State 39

   14 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 63


State 40

   15 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 15 (feature)


State 41

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   11 feature_list: feature_list . feature

    error     shift, and go to state 21
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 64

    feature  go to state 23


State 42

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 43

   56 formal_list: formal_list . ',' formal
   57            | error ',' formal_list .

    ','  shift, and go to state 37

    ','       [reduce using rule 57 (formal_list)]
    $default  reduce using rule 57 (formal_list)


State 44

   58 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 58 (formal)


State 45

   59 formal: error .

    $default  reduce using rule 59 (formal)


State 46

   56 formal_list: formal_list ',' formal .

    $default  reduce using rule 56 (formal_list)


State 47

   13 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 65


State 48

   42 expression: error .

    $default  reduce using rule 42 (expression)


State 49

   18 expression: IF . expression THEN expression ELSE expression FI

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 66


State 50

   38 expression: LET . let_expression

    error     shift, and go to state 67
    OBJECTID  shift, and go to state 68

    let_expression  go to state 69


State 51

   20 expression: WHILE . expression LOOP expression POOL

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 70


State 52

   21 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 71


State 53

   22 expression: NEW . TYPEID

    TYPEID  shift, and go to state 72


State 54

   23 expression: ISVOID . expression

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 73


State 55

   35 expression: STR_CONST .

    $default  reduce using rule 35 (expression)


State 56

   36 expression: INT_CONST .

    $default  reduce using rule 36 (expression)


State 57

   37 expression: BOOL_CONST .

    $default  reduce using rule 37 (expression)


State 58

   17 expression: OBJECTID . ASSIGN expression
   34           | OBJECTID .
   40           | OBJECTID . '(' expression_list_comma ')'

    ASSIGN  shift, and go to state 74
    '('     shift, and go to state 75

    $default  reduce using rule 34 (expression)


State 59

   33 expression: NOT . expression

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 76


State 60

   31 expression: '~' . expression

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 77


State 61

   19 expression: '{' . expression_list_colon '}'

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression             go to state 78
    expression_list_colon  go to state 79


State 62

   32 expression: '(' . expression ')'

    error       shift, and go to state 48
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expression  go to state 80


State 63

   14 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   24 expression: expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression
   28           | expression . '<' expression
   29           | expression . '<' '=' expression
   30           | expression . '=' expression
   39           | expression . '.' OBJECTID '(' expression_list_comma ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'

    '<'  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '@'  shift, and go to state 87
    '.'  shift, and go to state 88
    ';'  shift, and go to state 89


State 64

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 90


State 65

   13 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 91


State 66

   18 expression: IF expression . THEN expression ELSE expression FI
   24           | expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression
   28           | expression . '<' expression
   29           | expression . '<' '=' expression
   30           | expression . '=' expression
   39           | expression . '.' OBJECTID '(' expression_list_comma ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'

    THEN  shift, and go to state 92
    '<'   shift, and go to state 81
    '='   shift, and go to state 82
    '+'   shift, and go to state 83
    '-'   shift, and go to state 84
    '*'   shift, and go to state 85
    '/'   shift, and go to state 86
    '@'   shift, and go to state 87
    '.'   shift, and go to state 88


State 67

   47 let_expression: error . IN expression
   48               | error . ',' let_expression

    IN   shift, and go to state 93
    ','  shift, and go to state 94


State 68

   43 let_expression: OBJECTID . ':' TYPEID IN expression
   44               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   45               | OBJECTID . ':' TYPEID ',' let_expression
   46               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 95


State 69

   38 expression: LET let_expression .

    $default  reduce using rule 38 (expression)


State 70

   20 expression: WHILE expression . LOOP expression POOL
   24           | expression . '+' expression
   25           | expression . '-' expression
   26           | expression . '*' expression
   27           | expression . '/' expression
   28           | expression . '<' expression
   29           | expression . '<' '=' expression
   30           | expression . '=' expression
   39           | expression . '.' OBJECTID '(' expression_list_comma ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma ')'
